<resources>
    <string name="app_name">Jenastop</string>
    <string name="title_activity_main">Jenastop</string>
    <string name="failed">Failed</string>
    <string name="retry">Retry</string>
    <string name="action_settings">Settings</string>
    <string name="listitem_station_fav">Favorite</string>
    <string name="title_activity_schedule">Next stops</string>
    <string name="action_refresh">Refresh</string>
    <string name="no_stops">There are no stops planned for this station in the next hour.</string>
    <string name="sort">Sort</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="sort_by_dest">Sort by destination</string>
    <string name="sort_by_line">Sort by line</string>
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="about_text" translatable="false">
        <![CDATA[
        <p>Jenastop was written in scala by Richard Wiedenhöft and is licensed under the GPLv3. You may get the source
        code at <a href="https://github.com/richard-w/jenastop">https://github.com/richard-w/jenastop</a>.</p>

        <h1>License notes</h1>

        <h5>Scala standard library</h5>
        <p>
        Copyright &#169; 2002-2016 EPFL<br />
        Copyright &#169; 2011-2016 Typesafe, Inc.<br />
        Published under the <a href="http://www.scala-lang.org/license.html">Scala License</a>
        </p>

        <h5>Android support library</h5>
        <p>Published by Google under the Apache License 2.0</p>

        <h5>Spray JSON</h5>
        <p>
        Copyright &#169; 2011-2015 the spray project <http://spray.io><br />
        Published under the Apache License 2.0
        </p>

        <h5>JSoup</h5>
        <p>
        Copyright &#169; 2009 - 2013 Jonathan Hedley (jonathan@hedley.net)<br />
        Published under the MIT License
        </p>

        <h5>Material Icons</h5>
        <p>Published by Google under the CC-BY license.</p>
        ]]>
    </string>
    <string name="pref_scheduleSorting">Default schedule sorting</string>
    <string name="shortly">shortly</string>
</resources>
